# cadence

./: .gitignore  ADOPTION.md  CHANGELOG.md  CLAUDE.md  README.md  REFERENCES.md  pyproject.toml
.claude/skills/ship-a-change/: SKILL.md
.claude/skills/update-docs-after-merge/: SKILL.md
.github/workflows/: ci.yml  docs.yml
cadence/: __init__.py  catalog.py  cli.py  provenance.py  rationale.py  recommender.py  users.py
docs/: explanation-inner-outer-loop.md  how-to-add-a-variant.md  limitations.md  reference.md  tutorial-first-recommendation.md
experiments/: ATTRIBUTION.md  __init__.py  bootstrap.py  cross_domain.py  cross_domain_loop.py  data.py  feature_selection_loop.py  metrics.py  run_experiment.py
hooks/: pre-commit
memory/: README.md  semantic.md
memory/episodic/: 2026-06-30-length-fit.md  2026-06-30-session.md
memory/procedural/: add-a-feature.md  run-an-experiment.md
scripts/: demo.sh  install_hooks.sh
tests/: test_cross_domain.py  test_experiment.py  test_intent_properties.py  test_metrics.py  test_recommender.py
tools/: __init__.py  changelog.py  doc_consistency.py  intent_check.py  make_docs.py
