[project]
name = "cadence"
version = "0.1.0"
description = "A small, reproducible recommendation service with a provenance, verification, and experiment workflow."
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0,<3",
    "rich>=13.7,<14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "hypothesis>=6.100,<7",
]

[project.scripts]
cadence = "cadence.cli:main"

[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cadence"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
